--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app"></div>
         <!--cookie-->
-        <script src="/node_modules/vue-cookie/build/vue-cookie.js'"></script>
+        <script src="/node_modules/vue-cookie/build/vue-cookie.js"></script>
         <!--graph-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js"></script>
         <script src="https://cdn.rawgit.com/juijs/vue-graph/2216ae2f/dist/vue-graph.js"></script>
